--- a/src/views/courses.ejs
+++ b/src/views/courses.ejs
@@ -4,7 +4,7 @@
         <h1 class="fs-1 fw-bold text-blue-primary border-bottom mb-2 mt-2">Nossos Cursos</h1>
         <section class="courses">
             <article class="course">
-                <img src="./img/course1.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course1.png" alt=""></a>
                 <h1><a href="#">Reta Final TRT - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
@@ -15,7 +15,7 @@
                 </div>                    
             </article>
             <article class="course">
-                <img src="./img/course2.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course2.png" alt=""></a>
                 <h1><a href="#">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
@@ -26,7 +26,7 @@
                 </div> 
             </article>
             <article class="course">
-                <img src="./img/course3.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course3.png" alt=""></a>
                 <h1><a href="#">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
@@ -37,7 +37,7 @@
                 </div>
             </article>
             <article class="course">
-                <img src="./img/course1.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course1.png" alt=""></a>
                 <h1><a href="#">Reta Final TRT - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
@@ -48,7 +48,7 @@
                 </div>                    
             </article>
             <article class="course">
-                <img src="./img/course2.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course2.png" alt=""></a>
                 <h1><a href="#">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
@@ -59,7 +59,7 @@
                 </div> 
             </article>
             <article class="course">
-                <img src="./img/course3.png" alt="">
+                <a class="overflow-hidden img-hover" href="#"><img src="./img/course3.png" alt=""></a>
                 <h1><a href="#">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
