--- a/src/views/about-page.ejs
+++ b/src/views/about-page.ejs
@@ -4,43 +4,40 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"></div>
+                    <div class="topic"><img src="./img/graduation-cap.png" alt=""></div>
                 </div>
                 <div class="col-6 offset-6 border-left">
                     <div class="py-2">
                         <h1 class="about-title">Sobre</h1>
-                        <p class="about-content">O Inapi nasceu com a crença de que a educação transforma a vida das pessoas e que o ensino de qualidade tem o poder de realizar sonhos.</p>
+                        <p class="about-content mr-50">O Inapi nasceu com a crença de que a educação transforma a vida das pessoas e que o ensino de qualidade tem o poder de realizar sonhos.</p>
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"></div>
+                    <div class="topic"><img src="./img/boook.png" alt=""></div>
                 </div>
                 <div class="col-6 text-right border-right">
                     <div class="py-2">
                         <h1 class="about-title">Missão</h1>
-                        <p class="about-content">Promover com excelência o ensino e transformar a vida das pessoas mediante a concretização de sonhos.</p>
+                        <p class="about-content ml-50">Promover com excelência o ensino e transformar a vida das pessoas mediante a concretização de sonhos.</p>
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"></div>
+                    <div class="topic"><img src="./img/book.png" alt=""></div>
                 </div>
                 <div class="col-6 offset-6 border-left">
                     <div class="py-2">
                         <h1 class="about-title">Visão</h1>
-                        <p class="about-content">Consolidação como preparatório referência para Concursos Públicos, Exame de Ordem e Atualização Profissional.</p>
+                        <p class="about-content mr-50">Consolidação como preparatório referência para Concursos Públicos, Exame de Ordem e Atualização Profissional.</p>
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"></div>
+                    <div class="topic"><img src="./img/classroom.png" alt=""></div>
                 </div>
                 <div class="col-6 text-right border-right">
                     <div class="py-2">
                         <h1 class="about-title">Valores</h1>
-                        <p class="about-content">Através do desempenho de nossa missão, nosso instituto tem como valores a integridade, honestidade, competência, profissionalismo, o respeito e a valorização das pessoas e o comprometimento com o aluno.</p>
+                        <p class="about-content ml-50">Através do desempenho de nossa missão, nosso instituto tem como valores a integridade, honestidade, competência, profissionalismo, o respeito e a valorização das pessoas e o comprometimento com o aluno.</p>
                     </div>
-                </div>
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"></div>
                 </div>
             </div>
         </div>
