--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -30,13 +30,12 @@
         <nav class="main-nav bg-blue-primary d-flex align-items-center">
             <div class="container d-flex justify-content-between align-items-center position-relative">
                 <ul class="d-flex gap-2">
-                    <li><a class="text-decoration-none text-green-primary" href="/">Início</a></li>
-                    <li><a class="text-decoration-none text-green-primary" href="/sobre">Sobre</a></li>
-                    <li><a class="text-decoration-none text-green-primary" href="/cursos">Cursos</a></li>
-                    <li><a class="text-decoration-none text-green-primary" href="/blog">Blog</a></li>
+                    <li><a class="text-decoration-none text-white" href="/">Início</a></li>
+                    <li><a class="text-decoration-none text-white" href="/sobre">Sobre</a></li>
+                    <li><a class="text-decoration-none text-white" href="/cursos">Cursos</a></li>
                 </ul>
                 
-                <a class="position-absolute left-50 translate-middle-x" href="/"><img class="brand" src="./img/logo.png" alt=""></a>
+                <a class="position-absolute left-50 translate-middle-x" href="/"><img class="brand" src="./img/logo-bottom.png" alt=""></a>
 
                 <form class="search-form">
                     <input type="text" name="search" id="">
