--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -4,14 +4,15 @@
 :root {
     --color-gray-primary: #4d4d4d;
     --color-green-primary: #38ff84;
-    --color-blue-primary: #012265;
+    --color-blue-primary: #1684A7;
 }
 
 * { font-family: 'Montserrat', sans-serif !important; }
 
 .about { margin: 0 -1rem; display: flex; flex-wrap: wrap; padding-top: 2rem; }
 .about article { flex: 0 0 auto; width: 50%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
-.about article .content { border: 1px solid #eee; border-radius: 1rem; padding: 1rem; box-sizing: border-box; height: 100%; }
+.about article .content { display: flex; border: 1px solid #eee; border-radius: 1rem; padding: 1rem; box-sizing: border-box; height: 100%; }
+.about article .content img { height: 5rem; margin-right: 1.5rem; }
 .about article h1 { font-weight: bold; font-size: 1.5rem; color: var(--color-blue-primary); }
 /* .about article h1, .about article p { text-align: center; } */
 
@@ -24,7 +25,7 @@
 .border-left { border-left: 1px solid #eee; }
 .border-right { border-right: 1px solid #eee; }
 
-.brand { height: 4rem; }
+.brand { height: 8rem; }
 
 .btn-control { text-indent: -999999px; width: 3rem; aspect-ratio: 1/1; background: none; background-size: contain; border: none; cursor: pointer; }
 .btn-control.next { background-image: url(../svg/arrow-right.svg); }
@@ -45,7 +46,8 @@
 .courses .course { display: flex; flex-direction: column; flex: 0 0 auto; width: 33.33333%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
 .courses .course h1 { font-weight: bold; flex: 1; margin-top: 1rem; }
 .courses .course h1 a { text-decoration: none; color: var(--color-blue-primary); }
-.courses .course img { aspect-ratio: 490/300; width: 100%; background-color: #ccc; border-radius: 1rem; object-fit: cover; }
+.courses .course img { aspect-ratio: 490/300; width: 100%; background-color: #ccc; border-radius: 1rem; object-fit: cover; transition: transform 1s; }
+.courses .course img:hover { transform: scale(1.1); }
 .courses .course .pricing { margin-top: 1rem; }
 .courses .course .pricing-de { text-decoration: line-through; font-size: .75rem; color: var(--color-gray-primary); }
 .courses .course .pricing-por, .courses .course .pricing-parcelas { font-weight: bold; }
@@ -72,6 +74,8 @@ footer p, footer a { font-size: .75rem; }
 .fs-1 { font-size: 2rem; }
 .fw-bold { font-weight: bold; }
 
+.img-hover { aspect-ratio: 490/300; border-radius: 1rem; }
+
 .left-50 { left: 50%; }
 
 .link-all { transition: transform .5s; text-decoration: none; border: 1px solid var(--color-blue-primary); border-radius: 50rem; text-align: center; color: var(--color-blue-primary); padding: .5rem 1rem; display: block; margin: 1rem 0; }
@@ -79,6 +83,8 @@ footer p, footer a { font-size: .75rem; }
 
 .main-nav { height: 6.25rem; }
 
+.ml-50 { margin-left: 50%; }
+.mr-50 { margin-right: 50%; }
 .mb-2 { margin-bottom: 2rem !important; }
 .mt-2 { margin-top: 2rem; }
 .my-1 { margin: 1rem 0; }
@@ -99,7 +105,7 @@ footer p, footer a { font-size: .75rem; }
 
 .row { margin: 0 -1rem; display: flex; flex-wrap: wrap; }
 
-.search-form { border: 1px solid var(--color-green-primary); padding: .25rem 1rem; border-radius: 50rem; }
+.search-form { border: 1px solid #fff; padding: .25rem 1rem; border-radius: 50rem; }
 .search-form input { background: none; border: none; outline: none; color: white; }
 .search-form button { text-indent: -99999px; aspect-ratio: 1/1; width: 1rem; background: none; border: none; background-image: url(../svg/search.svg); background-repeat: no-repeat; background-size: contain; cursor: pointer; }
 
@@ -127,10 +133,11 @@ footer p, footer a { font-size: .75rem; }
 .text-gray-primary { color: var(--color-gray-primary); }
 .text-green-primary { color: var(--color-green-primary); }
 .text-blue-primary { color: var(--color-blue-primary); }
+.text-white { color: #fff; }
 
 .top-nav { height: 3.125rem; }
 
-.topic { height: 1.5rem; width: 1.5rem; background-color: #eee; border-radius: 50rem; }
+.topic img { height: 3rem; }
 
 .translate-middle-x { transform: translateX(-50%); }
 
