--- a/src/views/about-page.ejs
+++ b/src/views/about-page.ejs
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"><img src="./img/graduation-cap.png" alt=""></div>
+                    <div class="topic"><img src="/img/graduation-cap.png" alt=""></div>
                 </div>
                 <div class="col-6 offset-6 border-left">
                     <div class="py-2">
@@ -13,7 +13,7 @@
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"><img src="./img/boook.png" alt=""></div>
+                    <div class="topic"><img src="/img/boook.png" alt=""></div>
                 </div>
                 <div class="col-6 text-right border-right">
                     <div class="py-2">
@@ -22,7 +22,7 @@
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"><img src="./img/book.png" alt=""></div>
+                    <div class="topic"><img src="/img/book.png" alt=""></div>
                 </div>
                 <div class="col-6 offset-6 border-left">
                     <div class="py-2">
@@ -31,7 +31,7 @@
                     </div>                    
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="topic"><img src="./img/classroom.png" alt=""></div>
+                    <div class="topic"><img src="/img/classroom.png" alt=""></div>
                 </div>
                 <div class="col-6 text-right border-right">
                     <div class="py-2">
