--- a/src/views/slide.ejs
+++ b/src/views/slide.ejs
@@ -9,7 +9,7 @@
                 <button class="slide-control"></button>
             </div>
             <div class="slide-imgs">
-                <img src="./img/slide.png" alt="">
+                <img src="/img/slide.png" alt="">
             </div>
         </div>
     </div>
