--- a/src/views/testimonials.ejs
+++ b/src/views/testimonials.ejs
@@ -1,6 +1,6 @@
 <section class="overflow-hidden py-3 border-top">
     <div class="container">
-        <h1 class="text-center fs-1 fw-bold text-blue-primary">Depoimentos</h1>
+        <h1 class="text-center h2 text-blue-primary">Depoimentos</h1>
         <p class="text-center">Obrigado pelas felicitações</p>
         <div class="testimonials">
             <article class="testimonial">
