--- a/src/views/courses.ejs
+++ b/src/views/courses.ejs
@@ -1,11 +1,11 @@
 <main>
 
     <div class="container">
-        <h1 class="fs-1 fw-bold text-blue-primary border-bottom mb-2 mt-2">Nossos Cursos</h1>
+        <h1 class="h2 text-blue-primary border-bottom mb-2 mt-2">Nossos Cursos</h1>
         <section class="courses">
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course1.png" alt=""></a>
-                <h1><a href="#">Reta Final TRT - Noite (Ao Vivo)</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Reta Final TRT - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
@@ -15,8 +15,8 @@
                 </div>                    
             </article>
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course2.png" alt=""></a>
-                <h1><a href="#">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course2.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
@@ -26,8 +26,8 @@
                 </div> 
             </article>
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course3.png" alt=""></a>
-                <h1><a href="#">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course3.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
@@ -37,8 +37,8 @@
                 </div>
             </article>
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course1.png" alt=""></a>
-                <h1><a href="#">Reta Final TRT - Noite (Ao Vivo)</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course1.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Reta Final TRT - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
@@ -48,8 +48,8 @@
                 </div>                    
             </article>
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course2.png" alt=""></a>
-                <h1><a href="#">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course2.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">Mega Revisão de Véspera TJ/PI (Analista Judiciário) - Presencial</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
@@ -59,8 +59,8 @@
                 </div> 
             </article>
             <article class="course">
-                <a class="overflow-hidden img-hover" href="#"><img src="./img/course3.png" alt=""></a>
-                <h1><a href="#">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
+                <a class="overflow-hidden img-hover" href="/curso/reta-final-trt-noite-ao-vivo"><img src="/img/course3.png" alt=""></a>
+                <h1><a href="/curso/reta-final-trt-noite-ao-vivo">1ª Fase OAB XXXVI - Noite (Ao Vivo)</a></h1>
                 <div class="pricing">
                     <p class="pricing-de">de R$ 859,00</p>
                     <p class="pricing-por">Por <span>R$ 687,20</span></p>
