--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -2,44 +2,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-2">
-                    <img src="./img/LogoINAPI.png" alt="">
+                    <img src="/img/LogoINAPI.png" alt="">
                 </div>
 
                 <div class="col-2">
-                    <h1>Teresina/PI:</h1>
+                    <h1 class="text-blue-primary">Teresina/PI:</h1>
                     <p>Rua Senador Pinheiro Machado, 1164</p>
                     <p>Centro - Cep: 96810-136</p>
                 </div>
 
                 <div class="col-2">
-                    <h1>Nossos Cursos:</h1>
+                    <h1 class="text-blue-primary">Nossos Cursos:</h1>
                     <ul>
-                        <li><a href="#">Curso 1</a></li>
-                        <li><a href="#">Curso 2</a></li>
-                        <li><a href="#">Curso 3</a></li>
-                        <li><a href="#">Curso 4</a></li>
-                        <li><a href="#">Curso 5</a></li>
+                        <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 1</a></li>
+                        <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 2</a></li>
+                        <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 3</a></li>
+                        <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 4</a></li>
+                        <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 5</a></li>
                     </ul>
                 </div>
 
                 <div class="col-2">
-                    <h1>Institucional:</h1>
+                    <h1 class="text-blue-primary">Institucional:</h1>
                     <ul>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Trabalhe Conosco</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Cursos</a></li>
-                        <li><a href="#">Garantia</a></li>
+                        <li><a href="/sobre">Sobre</a></li>
+                        <li><a href="/cursos">Cursos</a></li>
+                        <li><a href="/login">Entrar</a></li>
+                        <li><a href="/cadastrar">Cadastrar</a></li>
                     </ul>
                 </div>
 
                 <div class="col-2">
-                    <h1>Atendimento:</h1>
+                    <h1 class="text-blue-primary">Atendimento:</h1>
                     <p>Segunda a Sexta, exceto feriados, das 8hs às 18hs, horário de Brasília.</p>
                 </div>
 
                 <div class="col-2">
-                    <h1>Contato:</h1>
+                    <h1 class="text-blue-primary">Contato:</h1>
                     <p>(86) 3304.3224</p>
                     <p>inapithe@gmail.com</p>
                 </div>
@@ -47,7 +46,7 @@
         </div>
     </footer>
     
-    <script src="./js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </body>
 </html>
