--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,17 +1,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <img src="/img/LogoINAPI.png" alt="">
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <h1 class="text-blue-primary">Teresina/PI:</h1>
                     <p>Rua Senador Pinheiro Machado, 1164</p>
                     <p>Centro - Cep: 96810-136</p>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <h1 class="text-blue-primary">Nossos Cursos:</h1>
                     <ul>
                         <li><a href="/curso/reta-final-trt-noite-ao-vivo">Curso 1</a></li>
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <h1 class="text-blue-primary">Institucional:</h1>
                     <ul>
                         <li><a href="/sobre">Sobre</a></li>
@@ -32,12 +32,12 @@
                     </ul>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <h1 class="text-blue-primary">Atendimento:</h1>
                     <p>Segunda a Sexta, exceto feriados, das 8hs às 18hs, horário de Brasília.</p>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-lg-2">
                     <h1 class="text-blue-primary">Contato:</h1>
                     <p>(86) 3304.3224</p>
                     <p>inapithe@gmail.com</p>
