--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -240,6 +240,8 @@ footer p, footer a { font-size: .75rem; }
     .about article { flex: 0 0 auto; width: 50%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
     .search-form { display: block; border: 1px solid #fff; padding: .25rem 1rem; border-radius: 50rem; }
     .main-nav ul { display: flex; }
+
+    .py-md-6 { padding: 8rem 0; }
 }
 
 /* Large devices (desktops, 992px and up) */
