--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -4,63 +4,63 @@
         <div class="container">
             <form>
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-12 col-lg-8">
                         <div class="border br-1 px-2 pt-2 my-2">
                             <div class="row">
                                 <div class="col-12">
                                     <h2 class="h4 text-blue-primary border-bottom mb-2">Informações sobre o aluno</h2>
                                 </div>
-                                <div class="col-12">
+                                <div class="col-12 col-md-12">
                                     <label class="form-label" for="name">Nome Completo:</label>
                                     <input class="form-control" type="text" name="name" id="name" placeholder="Informe seu nome completo">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="email">E-Mail:</label>
                                     <input class="form-control" type="text" name="email" id="email" placeholder="exemplo@mail.com">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="phone">Telefone:</label>
                                     <input class="form-control" type="text" name="phone" id="phone" placeholder="(86) 9 9999-9999">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="birth-date">Data de Nascimento:</label>
                                     <input class="form-control" type="text" name="birth-date" id="birth-date" placeholder="DD/MM/AAAA">
                                 </div>
-                                <div class="col-12">
+                                <div class="col-12 col-md-12">
                                     <h2 class="h4 text-blue-primary border-bottom mb-2">Informe seu endereço</h2>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-12 col-md-3">
                                     <label class="form-label" for="cep">CEP:</label>
                                     <input class="form-control" type="text" name="cep" id="cep" placeholder="00000-000">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="endereco">Endereço:</label>
                                     <input class="form-control" type="text" name="endereco" id="endereco" placeholder="Insira seu endereço">
                                 </div>
-                                <div class="col-3">
+                                <div class="col-12 col-md-3">
                                     <label class="form-label" for="number">Número:</label>
                                     <input class="form-control" type="text" name="number" id="number" placeholder="Ex.: 1234">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="bairro">Bairro:</label>
                                     <input class="form-control" type="text" name="bairro" id="bairro" placeholder="Insira seu bairro">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="complemento">Complemento:</label>
                                     <input class="form-control" type="text" name="complemento" id="complemento" placeholder="Ex.: Quadra, Conjunto...">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="cidade">Cidade:</label>
                                     <input class="form-control" type="text" name="cidade" id="cidade" placeholder="Insira sua cidade">
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12 col-md-6">
                                     <label class="form-label" for="estado">Estado:</label>
                                     <input class="form-control" type="text" name="estado" id="estado" placeholder="Insira seu estado">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="border br-1 p-2 my-2">
                             <h2 class="text-gray-primary">Resumo da Compra</h2>
                             <p class="fs-small text-gray-primary my-1"><strong class="fw-bold">Curso:</strong> Curso OAB 2ª Fase Penal 35º Exame</p>
