--- a/src/views/course-page.ejs
+++ b/src/views/course-page.ejs
@@ -19,49 +19,49 @@
         <div class="container">
             <h2 class="h3 text-center my-2 text-blue-primary">Vantagens do Curso</h2>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Aulas com transmissão online ao vivo e todas as aulas ficam gravadas para assistir quantas vezes quiser.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Apostila de questões em PDF na plataforma do aluno.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Caderno de treino com 12 simulados disponível na plataforma do aluno.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Material teórico de apoio em PDF disponível na plataforma do aluno.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">04 simulados com avaliação de desempenho.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">A melhor equipe de professores. Especialistas em aprovação.</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Grupo de WhatsApp para dicas e troca de informações (solicitar acesso no numero: 86 9.8136-5984).</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="d-flex my-1">
                         <img class="info-icon" src="/img/book.png" alt="">
                         <p class="d-flex align-items-center">Aulas disponíveis até a data da prova.</p>
@@ -73,10 +73,10 @@
         <div class="container">
             <h2 class="h3 text-center my-2 text-blue-primary">Disponibilização Das Aulas</h2>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <img class="img-fluid br-1" src="/img/course3.png" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <p class="my-1">O próximo concurso para Técnico do Seguro Social do INSS está com edital prestes a ser lançado, então não perca mais tempo, e comece já sua preparação para buscar uma das mil vagas com a gente!</p>
                     <p class="my-1">Pensando em você, o Ceisc reuniu os melhores professores para ministrarem os conteúdos que foram cobrados no último edital, e você terá acesso a aulas de UPGRADE assim que o novo edital for publicado.</p>
                     <p class="my-1">As aulas ficarão disponíveis até a data da prova que ainda será marcada.</p>
@@ -105,13 +105,13 @@
         <section class="bg-blue-primary py-3 mt-2">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-white h1 fw-bold">1ª Fase OAB XXXVI - Noite (Ao Vivo)</h1>
                         <p class="text-white">de R$859,00 por R$687,20</p>
                         <h1 class="text-yellow-primary h1 fw-bold">10x de R$68,72</h1>
                         <p class="text-white fs-small">Ganhe 5% de desconto pagando no boleto à vista ou por PIX (R$652,84)</p>
                     </div>
-                    <div class="col-6 d-flex align-items-end">
+                    <div class="col-12 col-md-6 d-flex align-items-end">
                         <button class="btn-success h-50">Comprar este curso</button>
                     </div>
                 </div>
