--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -50,7 +50,7 @@
 
 .container { width: 100%; padding: 0 1rem; max-width: calc(1200px + 2rem); box-sizing: border-box; margin: 0 auto; }
 
-.course-banner { position: relative; width: 100%; aspect-ratio: 1920/600; }
+.course-banner { position: relative; width: 100%; height: 50vh; }
 .course-banner .checkout-btn { margin-top: 1rem; cursor: pointer; padding: 1.25rem 2rem; background: none; color: #fff; border: 1px solid #fff; border-radius: 1rem; transition: all .25s; }
 .course-banner .checkout-btn:hover { border: 1px solid #09A599; transform: scale(1.1); color: var(--color-green-primary); }
 .course-banner img { width: 100%; height: 100%; object-fit: cover; display: block; }
@@ -101,7 +101,7 @@ footer p, footer a { font-size: .75rem; }
 .fs-small { font-size: .85rem!important; }
 .fw-bold { font-weight: bold!important; }
 
-.h-50 { height: 50%; }
+.h-50 { height: 5rem; margin-top: 2rem; }
 .h-100 { height: 100%; }
 
 .h1 { font-size: 2.5rem; margin-top: 0; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; }
@@ -148,7 +148,7 @@ footer p, footer a { font-size: .75rem; }
 .position-absolute { position: absolute; }
 .position-relative { position: relative; }
 
-.profs { display: flex; justify-content: center; gap: 2rem; }
+.profs { display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap; }
 .prof { display: flex; flex-direction: column; align-items: center; }
 .prof img { aspect-ratio: 1/1; width: 7.5rem; border-radius: 50rem; }
 
@@ -242,6 +242,7 @@ footer p, footer a { font-size: .75rem; }
     .main-nav ul { display: flex; }
 
     .py-md-6 { padding: 8rem 0; }
+    .h-50 { height: 50%; }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -254,6 +255,8 @@ footer p, footer a { font-size: .75rem; }
     .col-lg-8 { flex: 0 0 auto; width: 66.66666666666667%; box-sizing: border-box; padding: 0 1rem; }
     .col-lg-9 { flex: 0 0 auto; width: 75%; box-sizing: border-box; padding: 0 1rem; }
     .col-lg-12 { flex: 0 0 auto; width: 100%; box-sizing: border-box; padding: 0 1rem; }
+
+    .course-banner { position: relative; width: 100%; aspect-ratio: 1920/600; }
 
     .courses .course { display: flex; flex-direction: column; flex: 0 0 auto; width: 33.33333%; box-sizing: border-box; padding: 0 1rem; margin-bottom: 2rem; }
     .testimonials .testimonial { flex: 0 0 auto; width: 33.3333%; padding: 0 1rem; box-sizing: border-box; transform: translateX(-100%); transition: transform .75s; }
