--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -45,6 +45,8 @@
             </div>
         </div>
     </footer>
+
+    <%- include('whats-link'); %>
     
     <script src="/js/scripts.js"></script>
 
