--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -211,6 +211,9 @@ footer p, footer a { font-size: .75rem; }
 .w-75 { width: 75%; }
 .w-100 { width: 100%; }
 
+.whats-link { position: fixed; box-shadow: 0 .125rem .25rem rgba(0,0,0,.075); background-color: #fff; bottom: 1.5rem; right: 1.5rem; display: flex; border: 1px solid var(--color-green-primary); border-radius: 50rem; padding: 1rem; }
+.whats-link img { height: 2rem; }
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px)
 {
