--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -21,6 +21,8 @@
 
 .bg-blue-primary { background-color: var(--color-blue-primary); }
 
+body { background-image: url(../img/bgbody.png); background-size: cover; }
+
 .border { border: 1px solid #eee; }
 .border-top { border-top: 1px solid #eee; }
 .border-bottom { border-bottom: 1px solid #eee; }
