--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -21,7 +21,7 @@
 
 .bg-blue-primary { background-color: var(--color-blue-primary); }
 
-body { background-image: url(../img/bgbody.png); background-size: cover; }
+body { background-image: url(../img/ag-square.png); }
 
 .border { border: 1px solid #eee; }
 .border-top { border-top: 1px solid #eee; }
